--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,7 @@ jobs:
 
     strategy:
       matrix:
+        os: [ubuntu-lastest, windows-2016]
         node-version: [10.x, 12.x]
 
     steps:
